--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"type": "git",
 		"url": "https://github.com/usama8800/VSCode-Tab-Groups.git"
 	},
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"engines": {
 		"vscode": "^1.35.0"
 	},
@@ -16,6 +16,7 @@
 	],
 	"activationEvents": [
 		"onCommand:extension.saveGroup",
+		"onCommand:extension.clearAndSaveGroup",
 		"onCommand:extension.restoreGroup",
 		"onCommand:extension.clearAndRestoreGroup",
 		"onCommand:extension.deleteGroup"
@@ -26,6 +27,10 @@
 			{
 				"command": "extension.saveGroup",
 				"title": "Save tab group"
+			},
+			{
+				"command": "extension.clearAndSaveGroup",
+				"title": "Save tab group and close all tabs"
 			},
 			{
 				"command": "extension.restoreGroup",
