--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"type": "git",
 		"url": "https://github.com/usama8800/VSCode-Tab-Groups.git"
 	},
-	"version": "1.0.4",
+	"version": "1.0.5",
 	"engines": {
 		"vscode": "^1.35.0"
 	},
@@ -60,7 +60,7 @@
 				"title": "Tab Groups",
 				"properties": {
 					"tab-groups.groups": {
-						"type": "array",
+						"type": "string",
 						"scope": "window",
 						"description": "Used to save tab groups across sessions. Don't modify manually"
 					},
