--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"type": "git",
 		"url": "https://github.com/usama8800/VSCode-Tab-Groups.git"
 	},
-	"version": "1.0.9",
+	"version": "1.1.0",
 	"engines": {
 		"vscode": "^1.35.0"
 	},
@@ -21,7 +21,9 @@
 		"onCommand:extension.updateLastGroup",
 		"onCommand:extension.restoreGroup",
 		"onCommand:extension.clearAndRestoreGroup",
-		"onCommand:extension.deleteGroup"
+		"onCommand:extension.deleteGroup",
+		"onCommand:git.checkout",
+		"*"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
@@ -67,7 +69,14 @@
 					"tab-groups.saveGlobally": {
 						"type": "boolean",
 						"scope": "window",
-						"description": "Save tab groups globally or locally in a workspace"
+						"description": "Save tab groups globally or locally in a workspace",
+						"default": true
+					},
+					"tab-groups.gitBranchGroups": {
+						"type": "boolean",
+						"scope": "window",
+						"description": "When changing git branches, save and restore groups automatically",
+						"default": true
 					}
 				}
 			}
@@ -80,13 +89,19 @@
 		"postinstall": "node ./node_modules/vscode/bin/install",
 		"test": "npm run compile && node ./node_modules/vscode/bin/test"
 	},
+	"extensionDependencies": [
+		"vscode.git"
+	],
 	"devDependencies": {
 		"@types/glob": "^7.1.1",
 		"@types/mocha": "^2.2.42",
-		"@types/node": "^10.17.13",
+		"@types/node": "^10.17.21",
 		"open": "^6.4.0",
 		"tslint": "^5.20.1",
-		"typescript": "^3.7.4",
-		"vscode": "^1.1.36"
+		"typescript": "^3.8.3"
+	},
+	"dependencies": {
+		"@types/vscode": "^1.44.0",
+		"vscode-test": "^1.3.0"
 	}
 }
