--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
 		"type": "git",
 		"url": "https://github.com/usama8800/VSCode-Tab-Groups.git"
 	},
-	"version": "1.3.5",
-	"engines": {
-		"vscode": "^1.35.0"
-	},
+	"version": "1.3.6",
 	"categories": [
 		"Other"
 	],
@@ -98,6 +95,10 @@
 				{
 					"command": "extension.deleteEditorGroupFromView",
 					"when": "false"
+				},
+				{
+					"command": "extension.openFileFromView",
+					"when": "false"
 				}
 			]
 		},
@@ -173,6 +174,10 @@
 			{
 				"command": "extension.clearAndRestoreGroup",
 				"title": "Restore tab group and close all others"
+			},
+			{
+				"command": "extension.openFileFromView",
+				"title": "Open file"
 			}
 		],
 		"configuration": [
@@ -215,16 +220,19 @@
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
-		"postinstall": "node ./node_modules/vscode/bin/install",
 		"test": "npm run compile && node ./node_modules/vscode/bin/test"
 	},
 	"extensionDependencies": [
 		"vscode.git"
 	],
+	"engines": {
+		"vscode": "^1.34.0"
+	},
 	"devDependencies": {
 		"@types/glob": "^7.1.1",
 		"@types/mocha": "^2.2.42",
 		"@types/node": "^10.17.21",
+		"@types/vscode": "^1.34.0",
 		"open": "^6.4.0",
 		"tslint": "^5.20.1",
 		"typescript": "^3.8.3"
