Open group by clicking sidebar group name

--- a/package.json
+++ b/package.json
@@ -65,8 +65,7 @@
 				},
 				{
 					"when": "view == tab-groups-groups && viewItem == group",
-					"command": "extension.restoreGroupFromView",
-					"group": "inline"
+					"command": "extension.restoreGroupFromView"
 				},
 				{
 					"when": "view == tab-groups-groups && viewItem == group",
