--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"type": "git",
 		"url": "https://github.com/usama8800/VSCode-Tab-Groups.git"
 	},
-	"version": "1.3.7",
+	"version": "1.4.0",
 	"categories": [
 		"Other"
 	],
@@ -55,6 +55,16 @@
 					"when": "view == tab-groups-groups",
 					"command": "extension.closeAllEditors",
 					"group": "navigation"
+				},
+				{
+					"when": "view == tab-groups-groups",
+					"command": "extension.trackGroupFromView",
+					"group": "inline"
+				},
+				{
+					"when": "view == tab-groups-groups",
+					"command": "extension.stopTrackingGroupFromView",
+					"group": "inline"
 				}
 			],
 			"view/item/context": [
@@ -84,6 +94,14 @@
 			"commandPalette": [
 				{
 					"command": "extension.closeAllEditors",
+					"when": "false"
+				},
+				{
+					"command": "extension.stopTrackingGroupFromView",
+					"when": "false"
+				},
+				{
+					"command": "extension.trackGroupFromView",
 					"when": "false"
 				},
 				{
@@ -148,6 +166,22 @@
 					"dark": "icons/minimize_dark.svg",
 					"light": "icons/minimize_light.svg"
 				}
+			},
+			{
+				"command": "extension.trackGroup",
+				"title": "Track current group"
+			},
+			{
+				"command": "extension.stopTrackingGroup",
+				"title": "Stop tracking current group"
+			},
+			{
+				"command": "extension.stopTrackingGroupFromView",
+				"title": "Stop tracking current group"
+			},
+			{
+				"command": "extension.trackGroupFromView",
+				"title": "Track current group"
 			},
 			{
 				"command": "extension.undoFromView",
