--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,24 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
+			"label": "test",
+			"type": "npm",
+			"script": "test",
+			"group": {
+				"isDefault": true,
+				"kind": "test"
+			},
+			"problemMatcher": [],
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared",
+				"showReuseMessage": false,
+				"clear": true
+			}
+		},
+		{
 			"label": "compile",
 			"type": "npm",
 			"script": "compile",
