--- a/package.json
+++ b/package.json
@@ -289,9 +289,10 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
+		"precompile": "bash -c \"rm -rf ./out\"",
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
-		"test": "npm run compile && node ./node_modules/vscode/bin/test"
+		"test": "npm run compile && node ./out/test/runTest.js"
 	},
 	"extensionDependencies": [
 		"vscode.git"
@@ -300,12 +301,19 @@
 		"vscode": "^1.56.2"
 	},
 	"devDependencies": {
+		"@types/chai": "^4.2.18",
+		"@types/glob": "^7.1.3",
 		"@types/lodash": "^4.14.165",
+		"@types/mocha": "^8.2.2",
 		"@types/node": "^15.0.1",
 		"@types/vscode": "^1.56.0",
 		"@typescript-eslint/eslint-plugin": "^4.22.0",
 		"@typescript-eslint/parser": "^4.0.0",
+		"chai": "^4.3.4",
 		"eslint": "^7.25.0",
+		"kbm-robot": "0.0.4",
+		"mocha": "^8.4.0",
+		"simple-git": "^2.39.0",
 		"typescript": "^3.8.3"
 	},
 	"dependencies": {
