--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
 			"ES2020",
 			"DOM"
 		],
+		"typeRoots": [
+			"src/typings"
+		],
 		"sourceMap": true,
 		"rootDir": "src",
 		"strict": true /* enable all strict type-checking options */
