--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"type": "git",
 		"url": "https://github.com/usama8800/VSCode-Tab-Groups.git"
 	},
-	"version": "1.4.7",
+	"version": "1.4.8",
 	"categories": [
 		"Other"
 	],
@@ -292,7 +292,8 @@
 		"precompile": "bash -c \"rm -rf ./out\"",
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
-		"test": "npm run compile && node ./out/test/runTest.js"
+		"test": "npm run compile && node ./out/test/runTest.js",
+		"readyTestWorkspace": "node ./out/test/runTest.js readyOnly"
 	},
 	"extensionDependencies": [
 		"vscode.git"
@@ -307,17 +308,17 @@
 		"@types/mocha": "^8.2.2",
 		"@types/node": "^15.0.1",
 		"@types/vscode": "^1.56.0",
-		"@typescript-eslint/eslint-plugin": "^4.22.0",
-		"@typescript-eslint/parser": "^4.0.0",
+		"@typescript-eslint/eslint-plugin": "^4.24.0",
+		"@typescript-eslint/parser": "^4.24.0",
 		"chai": "^4.3.4",
 		"eslint": "^7.25.0",
 		"kbm-robot": "0.0.4",
 		"mocha": "^8.4.0",
 		"simple-git": "^2.39.0",
-		"typescript": "^3.8.3"
+		"typescript": "^4.2.4",
+		"vscode-test": "^1.3.0"
 	},
 	"dependencies": {
-		"lodash": "^4.17.21",
-		"vscode-test": "^1.3.0"
+		"lodash": "^4.17.21"
 	}
 }
