--- a/package.json
+++ b/package.json
@@ -292,7 +292,7 @@
 		"precompile": "bash -c \"rm -rf ./out\"",
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
-		"test": "npm run compile && node ./out/test/runTest.js",
+		"test": "npm run compile && node --inspect ./out/test/runTest.js",
 		"readyTestWorkspace": "node ./out/test/runTest.js readyOnly"
 	},
 	"extensionDependencies": [
@@ -302,6 +302,7 @@
 		"vscode": "^1.56.2"
 	},
 	"devDependencies": {
+		"@jimp/png": "^0.16.1",
 		"@types/chai": "^4.2.18",
 		"@types/glob": "^7.1.3",
 		"@types/lodash": "^4.14.165",
